[gd_scene load_steps=50 format=3 uid="uid://ctim5x1x3847q"]

[ext_resource type="Script" uid="uid://1whkrlu6s511" path="res://Characters/little_knight.gd" id="1_kneib"]
[ext_resource type="Texture2D" uid="uid://c3nw3oucql2aa" path="res://Assets/simple_knight_v2.svg" id="1_tescy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dy5uf"]
atlas = ExtResource("1_tescy")
region = Rect2(24, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5t4t"]
atlas = ExtResource("1_tescy")
region = Rect2(59, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx634"]
atlas = ExtResource("1_tescy")
region = Rect2(94, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v1c2"]
atlas = ExtResource("1_tescy")
region = Rect2(24, 67, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_isoon"]
atlas = ExtResource("1_tescy")
region = Rect2(59, 67, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ipvt"]
atlas = ExtResource("1_tescy")
region = Rect2(94, 67, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxicu"]
atlas = ExtResource("1_tescy")
region = Rect2(129, 67, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvjle"]
atlas = ExtResource("1_tescy")
region = Rect2(24, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkguq"]
atlas = ExtResource("1_tescy")
region = Rect2(59, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w864"]
atlas = ExtResource("1_tescy")
region = Rect2(94, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_337fj"]
atlas = ExtResource("1_tescy")
region = Rect2(129, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v38pm"]
atlas = ExtResource("1_tescy")
region = Rect2(24, 137, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_slnrk"]
atlas = ExtResource("1_tescy")
region = Rect2(59, 137, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkg41"]
atlas = ExtResource("1_tescy")
region = Rect2(94, 137, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jusu5"]
atlas = ExtResource("1_tescy")
region = Rect2(129, 137, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwstv"]
atlas = ExtResource("1_tescy")
region = Rect2(24, 172, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynyt4"]
atlas = ExtResource("1_tescy")
region = Rect2(59, 172, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrur6"]
atlas = ExtResource("1_tescy")
region = Rect2(94, 172, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c72sm"]
atlas = ExtResource("1_tescy")
region = Rect2(129, 172, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8lf5"]
atlas = ExtResource("1_tescy")
region = Rect2(24, 207, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoekg"]
atlas = ExtResource("1_tescy")
region = Rect2(59, 207, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5g46"]
atlas = ExtResource("1_tescy")
region = Rect2(94, 207, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_me310"]
atlas = ExtResource("1_tescy")
region = Rect2(129, 207, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpq70"]
atlas = ExtResource("1_tescy")
region = Rect2(24, 242, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5kr5"]
atlas = ExtResource("1_tescy")
region = Rect2(59, 242, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8qp4"]
atlas = ExtResource("1_tescy")
region = Rect2(94, 242, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiuiv"]
atlas = ExtResource("1_tescy")
region = Rect2(129, 242, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkgxj"]
atlas = ExtResource("1_tescy")
region = Rect2(196, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t215u"]
atlas = ExtResource("1_tescy")
region = Rect2(230, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cv6t"]
atlas = ExtResource("1_tescy")
region = Rect2(264, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_led2m"]
atlas = ExtResource("1_tescy")
region = Rect2(298, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcub4"]
atlas = ExtResource("1_tescy")
region = Rect2(332, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1ohm"]
atlas = ExtResource("1_tescy")
region = Rect2(366, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogd2i"]
atlas = ExtResource("1_tescy")
region = Rect2(400, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6wqy"]
atlas = ExtResource("1_tescy")
region = Rect2(434, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_37l5m"]
atlas = ExtResource("1_tescy")
region = Rect2(196, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym677"]
atlas = ExtResource("1_tescy")
region = Rect2(230, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx24b"]
atlas = ExtResource("1_tescy")
region = Rect2(264, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5kwl"]
atlas = ExtResource("1_tescy")
region = Rect2(298, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s1fd"]
atlas = ExtResource("1_tescy")
region = Rect2(332, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cewhe"]
atlas = ExtResource("1_tescy")
region = Rect2(366, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flkc4"]
atlas = ExtResource("1_tescy")
region = Rect2(400, 102, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43077"]
atlas = ExtResource("1_tescy")
region = Rect2(434, 102, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ls0yk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy5uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5t4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx634")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v1c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isoon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ipvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxicu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvjle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkguq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w864")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_337fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v38pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slnrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkg41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jusu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwstv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynyt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrur6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c72sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8lf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoekg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5g46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me310")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpq70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5kr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8qp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiuiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkgxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t215u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cv6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_led2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcub4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1ohm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogd2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6wqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37l5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym677")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx24b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5kwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s1fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cewhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flkc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43077")
}],
"loop": true,
"name": &"All Frames",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy5uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5t4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx634")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkgxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t215u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cv6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_led2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcub4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1ohm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogd2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6wqy")
}],
"loop": true,
"name": &"Roll_Left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37l5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym677")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx24b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5kwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s1fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cewhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flkc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43077")
}],
"loop": true,
"name": &"Roll_Right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8lf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoekg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5g46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me310")
}],
"loop": true,
"name": &"Walk_Left_Down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v1c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isoon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ipvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxicu")
}],
"loop": true,
"name": &"Walk_Left_Neutral",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v38pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slnrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkg41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jusu5")
}],
"loop": true,
"name": &"Walk_Left_Up",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpq70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5kr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8qp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiuiv")
}],
"loop": true,
"name": &"Walk_Right_Down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvjle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkguq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w864")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_337fj")
}],
"loop": true,
"name": &"Walk_Right_Neutral",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwstv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynyt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrur6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c72sm")
}],
"loop": true,
"name": &"Walk_Right_Up",
"speed": 5.0
}]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_m25l1"]
points = PackedVector2Array(0, -16, 15, -3, 12, -1, 15, 3, 10, 8, 7, 7, 7, 16, -8, 16, -8, 7, -12, 8, -16, 3, -13, 0, -16, -3)

[sub_resource type="CircleShape2D" id="CircleShape2D_k5t4t"]
radius = 19.0263

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k5t4t"]
radius = 16.0
height = 36.0

[node name="Knight" type="Node2D"]
top_level = true
z_index = 20

[node name="little_knight" type="RigidBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -1)
script = ExtResource("1_kneib")
jump_accel = -600.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="little_knight"]
sprite_frames = SubResource("SpriteFrames_ls0yk")
animation = &"Idle"

[node name="EnvironmentCollision" type="CollisionShape2D" parent="little_knight"]
shape = SubResource("ConvexPolygonShape2D_m25l1")

[node name="DealDamage" type="Area2D" parent="little_knight"]

[node name="AttackHitbox" type="CollisionShape2D" parent="little_knight/DealDamage"]
shape = SubResource("CircleShape2D_k5t4t")
disabled = true

[node name="TakeDamage" type="Area2D" parent="little_knight"]

[node name="Hurtbox" type="CollisionShape2D" parent="little_knight/TakeDamage"]
shape = SubResource("CapsuleShape2D_k5t4t")

[node name="Camera2D" type="Camera2D" parent="little_knight"]
zoom = Vector2(1.1, 1.1)
limit_bottom = 96

[node name="ResetPowerMode" type="Timer" parent="little_knight"]
wait_time = 0.4
one_shot = true
autostart = true
